--- a/research.html
+++ b/research.html
@@ -194,7 +194,7 @@ Finalist for the 2016 Service Science Section Student Paper Competition <br />
 <ul>
 <li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3129717">"Frustration-Based Promotions: Field Experiments in Ride-Sharing,"</a> with M. D. Fiszer and B. J. Kim, Minor Revision in <b>Management Science</b> <br />
 Accepted to the <i>2018 M&SOM Service SIG</i> and to the <i>2018 Marketplace Innovation Workshop</i><br />
-Media coverage: <a href="https://qz.com/1394320/economists-figured-out-the-best-way-for-uber-to-say-sorry/">Quartz</a>, <a href="https://oversharing.substack.com/p/economists-figured-out-the-best-way-for-uber-to-say-sorry">Oversharing</a>, <a href="http://www.stern.nyu.edu/experience-stern/faculty-research/proactive-customer-service-helps-ride-share-startup-gain-an-edge-in-a-brutal-market">NYU Stern Research Highlights</a>, <a href="https://maxccohen.github.io/Faculty Research-Maxime Cohen.pdf">Stern Alumni Magazine</a> <br />
+Media coverage: <a href="https://qz.com/1394320/economists-figured-out-the-best-way-for-uber-to-say-sorry/">Quartz</a>, <a href="https://oversharing.substack.com/p/economists-figured-out-the-best-way-for-uber-to-say-sorry">Oversharing</a>, <a href="http://www.stern.nyu.edu/experience-stern/faculty-research/proactive-customer-service-helps-ride-share-startup-gain-an-edge-in-a-brutal-market">NYU Stern Research Highlights</a>, <a href="https://maxccohen.github.io/Faculty Research-Maxime Cohen.pdf">NYU Stern Alumni Magazine</a> <br />
 Finalist in the 2018 M&SOM Student Paper Competition, First Place in the 2018 Best Cluster Paper Award - INFORMS Service Science
 </div>
 </p>
