--- a/research.html
+++ b/research.html
@@ -401,7 +401,7 @@ First price at the 2007 Technion Creativity in Science and Technology competitio
 
 <ul>
 <li><p><a href="https://dspace.mit.edu/bitstream/handle/1721.1/101291/938821441-MIT.pdf;sequence=1">"Pricing for Retail, Social Networks, and Green Technologies,"</a> Ph.D. Thesis, Massachusetts Institute of Technology, Sept. 2015 <br />
-INFORMS Revenue Management and Pricing Dissertation Award, 2016 <br />
+<b>INFORMS Revenue Management and Pricing Dissertation Award</b>, 2016 <br />
 </div>
 </p>
 </li>
