--- a/workEx.html
+++ b/workEx.html
@@ -33,49 +33,49 @@
 
 <ul>
 <li><p><b><a href="">Operations Management - McGill University - 2020 </a></b><br />
-Undergraduate core course (2 sections of 65 students). Evaluations: 4.9, 4.6 (out of 5).
+Undergraduate core course (2 sections of 65 students). Evaluations: 4.9, 4.6 (out of 5)
 </p>
 </li>
 </ul>
 
 <ul>
 <li><p><b><a href="">Revenue Management - McGill University - 2020 </a></b><br />
-Elective course for Master of Management in Analytics. Evaluation: 5/5.
+Elective course for Master of Management in Analytics. Evaluation: 5/5
 </p>
 </li>
 </ul>
   
 <ul>
 <li><p><b><a href="">Service Analytics - McGill University - 2020 </a></b><br />
-Elective course for Master of Management in Analytics.
+Elective course for Master of Management in Analytics
 </p>
 </li>
 </ul>
   
 <ul>
 <li><p><b><a href="">Operations Management - NYU Stern - 2017-2019 </a></b><br />
-Undergraduate core course (2 sections of 70 students each year). Evaluations: 6.6, 6.7, 6.5, 6.7 (out of 7), 4.8, 4.8 (out of 5).
+Undergraduate core course (2 sections of 70 students each year). Evaluations: 6.6, 6.7, 6.5, 6.7 (out of 7), 4.8, 4.8 (out of 5)
 </p>
 </li>
 </ul>
 
 <ul>
 <li><p><b><a href="">Operations in the Sharing Economy - NYU Stern - 2019 </a></b><br />
-Doctoral course on recent research trends in the context of the sharing economy. Evaluation: 5/5.
+Doctoral course on recent research trends in the context of the sharing economy. Evaluation: 5/5
 </p>
 </li>
 </ul>
 
 <ul>
 <li><p><b><a href="">Applying Revenue Management: Optimization in Retail - NYU Stern - 2016 </a></b><br />
-Course in the M.S. in Business Analytics program - 61 students.
+Course in the M.S. in Business Analytics program - 61 students
 </p>
 </li>
 </ul>
 
 <ul>
 <li><p><b><a href="https://www8.gsb.columbia.edu/caseworks/node/674">Case Study: "Supply Chain Coordination and Contracts in the Sharing Economy - a Case Study at Cargo,"</a></b> with C. D. Guetta and W. Xiao<br />
-Columbia CaseWorks 180203, April 2018. Available through <a href="https://hbsp.harvard.edu/product/CU215-PDF-ENG">Harvard Business Publishing</a>. <br />
+Columbia CaseWorks 180203, April 2018. Available through <a href="https://hbsp.harvard.edu/product/CU215-PDF-ENG">Harvard Business Publishing</a> <br />
 First Place in the 2018 <b>INFORMS Case Competition</b> <br />
 </p>
 </li>
@@ -83,20 +83,20 @@ First Place in the 2018 <b>INFORMS Case Competition</b> <br />
 
 <ul>
 <li><p><b><a href="https://maxccohen.github.io/Case-Study-Promotions.pdf">Case Study: "Optimizing Promotions for Supermarkets Using Data Analytics,"</a></b> with G. Perakis<br />
-Available through <a href="http://www.thecasecentre.org/educators/products/view?id=141750">thecasecentre.org</a>, March 2017. <br />
+Available through <a href="http://www.thecasecentre.org/educators/products/view?id=141750">thecasecentre.org</a>, March 2017 <br />
 </p>
 </li>
 </ul>
 
 <ul>
-<li><p><b><a href="">Case Study: "Managing Champagne Inventory in a Liquor Store,"</a></b> with W. Xiao (available upon request).
+<li><p><b><a href="">Case Study: "Managing Champagne Inventory in a Liquor Store,"</a></b> with W. Xiao (available upon request)
 </p>
 </li>
 </ul>
 
 <ul>
 <li><p><b><a href="https://www.liebertpub.com/doi/full/10.1089/big.2018.0092">Case Study: "Data-Driven Investment Strategies for Peer-to-Peer Lending,"</a></b> with C. D. Guetta, K. Jiao, and F. Provost<br />
-<a href="https://danguetta.github.io/research/lc">Supplemental material and notebooks</a>. <br />
+<a href="https://danguetta.github.io/research/lc">Supplemental material and notebooks</a> <br />
 Finalist in the 2019 <b>INFORMS Case Competition</b> <br />
 </p>
 </li>
@@ -104,7 +104,7 @@ Finalist in the 2019 <b>INFORMS Case Competition</b> <br />
 
 <ul>
 <li><p><b><a href="">Case Study: "Modern Retail Analytics: Data Visualization Using Tableau,"</a></b> with C. D. Guetta and M. Reed<br /> 
-Featured as a content piece on the <a href="https://community.tableau.com/community/teachers/overview">Tableau Instructor Resource Page. </a> <a href="https://danguetta.github.io/research/globalsuperstore">Case, Dataset, and Tutorials</a>.
+Featured as a content piece on the <a href="https://community.tableau.com/community/teachers/overview">Tableau Instructor Resource Page. </a> <a href="https://danguetta.github.io/research/globalsuperstore">Case, Dataset, and Tutorials</a>
 </p>
 </li>
 </ul>
