--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ Data Science and AI @<a href="https://conflictanalytics.queenslaw.ca/"</a> Confl
  Before joining McGill, I was an Assistant Professor of Technology, Operations, and Statistics</a> 
  at <a href="http://www.stern.nyu.edu/"</a> NYU Stern</a> and a Research Scientist at <a href="https://ai.google/">Google AI</a>. 
  I previously worked as a high-frequency trader and co-founded a real estate investment company.
- Besides university teaching and academic research, I am actively advising corporations and startups on topics related to pricing and data science.
+ Besides university teaching and academic research, I am actively advising corporations and startups on topics related to pricing, retail, and data science.
   <!-- My master's thesis was under the supervision of Professor <a href="http://webee.technion.ac.il/people/shimkin/">Nahum Shimkin</a>. 
   Here is a link to <a href="http://webee.technion.ac.il/people/maxcohen">my master's homepage</a>. -->
   
