--- a/news.html
+++ b/news.html
@@ -41,9 +41,11 @@
   
 <li><p><a href="https://www.mcgill.ca/desautels/channels/news/delve-converting-commuters-carpoolers-320995">Converting Commuters into Carpoolers</a>, Delve, March 2020</p>
  
-<li><p><a href="http://kingstonherald.com/release/conflict-analytics-lab-2010328064">Queen’s Law Partners with McGill to Combat Access-to-Justice Issues Using AI and Analytics</a>, Law Times, February 2020</p>
+<li><p><a href="https://www.lawtimesnews.com/resources/legal-education/queens-law-partners-with-mcgill-to-combat-access-to-justice-issues-using-ai-and-analytics/326110">Queen’s Law Partners with McGill to Combat Access-to-Justice Issues Using AI and Analytics</a>, Law Times, February 2020</p>
   
-<li><p><a href="https://www.lawtimesnews.com/resources/legal-education/queens-law-partners-with-mcgill-to-combat-access-to-justice-issues-using-ai-and-analytics/326110">United by Conflict – Queen’s and McGill Partner Up Through the Conflict Analytics Lab</a>, Kingston Herald, February 2020</p>
+<li><p><a href="https://www.academica.ca/top-ten/queens-mcgill-partner-advance-use-data-science-resolving-legal-conflicts">Queen's, McGill Partner to Advance the Use of Data Science in Resolving Legal Conflicts</a>, Academica Group, February 2020</p>
+  
+<li><p><a href="http://kingstonherald.com/release/conflict-analytics-lab-2010328064">United by Conflict – Queen’s and McGill Partner Up Through the Conflict Analytics Lab</a>, Kingston Herald, February 2020</p>
  
 <li><p><a href="https://www.mcgill.ca/bensadoun-school/article/canadian-retailers-digitization-long-overdue">For Canadian Retailers, Digitization Is Long Overdue</a>, McGill BSRM News, December 2019</p>
   
