--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ Data Science and AI @<a href="https://conflictanalytics.queenslaw.ca/"</a> Confl
 
 <h2>About</h2>
  <p class="p2"><span>
- I am an Associate Professor of Retail Management and Operations Management and a Bensadoun Faculty Scholar at <a href="https://www.mcgill.ca/"</a> McGill University</a>.
+ I am an Associate Professor of Retail Management and Operations Management, the co-director of the McGill Retail Innovation Lab, and a Bensadoun Faculty Scholar at <a href="https://www.mcgill.ca/"</a> McGill University</a>.
  Before joining McGill, I was an Assistant Professor of Technology, Operations, and Statistics</a> 
  at <a href="http://www.stern.nyu.edu/"</a> NYU Stern</a> and a Research Scientist at <a href="https://ai.google/">Google AI</a>. 
  I previously worked as a high-frequency trader and co-founded a real estate investment company.
