--- a/news.html
+++ b/news.html
@@ -31,6 +31,8 @@
 <h3>In the News</h3>
 <ul>
 
+<li><p><a href="https://www.mcgill.ca/delve/article/covid-19/retailers-post-pandemic-playbook">The Retailer's Post-Pandemic Playbook</a>, Delve, June 2020</p>
+
 <li><p><a href="https://www.mcgill.ca/delve/article/covid-19/consumer-behaviour-post-pandemic-retail-landscape">Consumer Behaviour in the Post-Pandemic Retail Landscape</a>, Delve, June 2020</p>
   
 <li><p><a href="https://globalnews.ca/video/6947666/community-events-legal-questions-for-laid-off-canadians/">NEWS Community Events: Legal Questions for Laid off Canadians</a>, Global News, May 2020</p>
