--- a/news.html
+++ b/news.html
@@ -31,6 +31,8 @@
 <h3>In the News</h3>
 <ul>
 
+<li><p><a href="https://pubsonline.informs.org/do/10.1287/orms.2020.03.06/full/">Teaching Millennials and Gen Z Students</a>, OR/MS Today INFORMS Magazine, June 2020</p>
+    
 <li><p><a href="https://www.mcgill.ca/delve/article/covid-19/retailers-post-pandemic-playbook">The Retailer's Post-Pandemic Playbook</a>, Delve, June 2020</p>
 
 <li><p><a href="https://www.mcgill.ca/delve/article/covid-19/consumer-behaviour-post-pandemic-retail-landscape">Consumer Behaviour in the Post-Pandemic Retail Landscape</a>, Delve, June 2020</p>
