--- a/students.html
+++ b/students.html
@@ -58,6 +58,12 @@
 <li><p>Matthieu Reed (2020) - McGill UG Integrated Management Student Fellow</p>
   
 <li><p>Selena Zhu (2020) - McGill UG Integrated Management Student Fellow</p>
+  
+<li><p>Arthur Pentecoste (2020) - McGill Master of Management in Analytics. First Position: BCG GAMMA, Data Scientist</p>
+  
+<li><p>Paul-Emile Gras (2020) - McGill Master of Management in Analytics</p>
+  
+<li><p>Paul Clavier (2020) - McGill Master of Management in Analytics</p>
 
 
 <!--Page generated 2009-08-14 17:53:09 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.-->
