--- a/research.html
+++ b/research.html
@@ -236,7 +236,7 @@ Media coverage: <a href="https://www.mcgill.ca/delve/article/blog/converting-com
 </ul>
 
 <ul>
-<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3565117">"The Impact of High-Occupancy Vehicle Lanes on Commuters: Field Evidence,"</a> with A. Ratzon and R. Sasson, submitted <font color="red"<b>(NEW - April 2020)</b></font> <br /> 
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3565117">"The Impact of High-Occupancy Vehicle Lanes on Commuters: Field Evidence,"</a> with A. Ratzon and R. Sasson, submitted <br /> 
 </div>
 </p>
 </li>
