--- a/research.html
+++ b/research.html
@@ -165,7 +165,7 @@ Associated article in <a href="http://www.sigecom.org/exchanges/volume_15/2/COHE
 </ol>
 
 <ol start="11">
-<li><p><a href="http://papers.ssrn.com/sol3/papers.cfm?abstract_id=2673810">"A Simple Rule for Pricing with Limited Knowledge of Demand,"</a> with R. S. Pindyck and G. Perakis, Forthcoming in <b>Management Science</b> <br />
+<li><p><a href="https://maxccohen.github.io/Simple-Rule-for-Pricing.pdf">"A Simple Rule for Pricing with Limited Knowledge of Demand,"</a> with R. S. Pindyck and G. Perakis, Forthcoming in <b>Management Science</b> (published online, June 2020) <br />
 Accepted to the 2016 <i>ACM Conference on Economics & Computation </i> (EC)<br />
 <a href="https://www.nber.org/papers/w21679">NBER Working Paper No. 21679</a> <br />
 </div>
