--- a/workEx.html
+++ b/workEx.html
@@ -47,7 +47,7 @@ Elective course for Master of Management in Analytics. Evaluation: 5/5
   
 <ul>
 <li><p><b><a href="">Service Analytics - McGill University - 2020 </a></b><br />
-Elective course for Master of Management in Analytics
+Elective course for Master of Management in Analytics. Evaluation: 4.7/5
 </p>
 </li>
 </ul>
