--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 Associate Professor, <a href="https://www.mcgill.ca/"</a> McGill University</a><br />
 Bensadoun Faculty Scholar <br />
 Co-Director, <a href="https://www.mcgill.ca/bensadoun-school/mril"</a> McGill Retail Innovation Lab</a> <br />
+Associate Member, <a href="https://www.mcgill.ca/ece/"</a>Electrical and Computer Engineering Department</a> (by courtesy) <br />
 Member of <a href="https://www.cirrelt.ca/"</a> CIRRELT </a> <br />
 Advisor @<a href="https://sarona.vc"</a> Sarona Ventures</a> <br />
 Data Science and AI @<a href="https://conflictanalytics.queenslaw.ca/"</a> Conflict Analytics Lab</a> and @<a href="https://myopencourt.org/"</a> MyOpenCourt.org</a> </p>
