--- a/news.html
+++ b/news.html
@@ -31,7 +31,9 @@
 <h3>In the News</h3>
 <ul>
 
-  <li><p><a href="https://myalumni.mcgill.ca/s/1762/gid2/interior-connect2.aspx?sid=1762&gid=2&pgid=2241">How COVID-19 Is Reshaping the Retail Industry</a>, McGill Alumni Webcast, June 2020</p>
+<li><p><a href="https://maxccohen.github.io/(R)evolution.pdf">(R)evolution of the Commercial & Retail Destination</a>, July 2020</p>
+  
+<li><p><a href="https://myalumni.mcgill.ca/s/1762/gid2/interior-connect2.aspx?sid=1762&gid=2&pgid=2241">How COVID-19 Is Reshaping the Retail Industry</a>, McGill Alumni Webcast, June 2020</p>
     
 <li><p><a href="https://pubsonline.informs.org/do/10.1287/orms.2020.03.06/full/">Teaching Millennials and Gen Z Students</a>, OR/MS Today INFORMS Magazine, June 2020</p>
     
