--- a/research.html
+++ b/research.html
@@ -361,14 +361,14 @@ In this paper, we ....
 </ul>
 
 <ul>
-<li><p><a href="">"Upgrading Promotions Using Business Analytics,"</a> with L. Baardman, K. Panchamgam, and G. Perakis, Forthcoming in <b>Management and Business Review</b>
+<li><p><a href="">"Conflict Analytics: When Data Science Meets Dispute Resolution,"</a> with S. Dahan and C. Rule, Forthcoming in <b>Management and Business Review</b>
 </div>
 </p>
 </li>
 </ul>
 
 <ul>
-<li><p><a href="">"Conflict Analytics: When Data Science Meets Dispute Resolution,"</a> with S. Dahan and C. Rule, submitted
+<li><p><a href="">"Upgrading Promotions Using Business Analytics,"</a> with L. Baardman, K. Panchamgam, and G. Perakis, submitted
 </div>
 </p>
 </li>
