--- a/research.html
+++ b/research.html
@@ -368,7 +368,7 @@ In this paper, we ....
 </ul>
 
 <ul>
-<li><p><a href="">"Upgrading Promotions Using Business Analytics,"</a> with L. Baardman, K. Panchamgam, and G. Perakis, submitted
+<li><p><a href="https://maxccohen.github.io/Promotions-Practice.pdf">"Upgrading Promotions Using Business Analytics,"</a> with L. Baardman, K. Panchamgam, and G. Perakis, submitted
 </div>
 </p>
 </li>
