--- a/research.html
+++ b/research.html
@@ -243,7 +243,7 @@ Media coverage: <a href="https://www.mcgill.ca/delve/article/blog/converting-com
 </ul>
 
 <ul>
-<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3459289">"Pricing with Fairness,"</a> with A. N. Elmachtoub and X. Lei, submitted <br /> <!-- <font color="red"<b>(NEW - September 2019)</b></font> <br /> -->
+<li><p><a href="https://maxccohen.github.io/Pricing-Fairness.pdf">"Pricing with Fairness,"</a> with A. N. Elmachtoub and X. Lei, submitted <br /> <!-- <font color="red"<b>(NEW - September 2019)</b></font> <br /> -->
 </div>
 </p>
 </li>
