--- a/students.html
+++ b/students.html
@@ -28,7 +28,7 @@
 <div id="toptitle">
 <h1>Maxime Cohen</h1>
 </div>
-<h3>Ph.D. Students</h3>
+<h3>Ph.D. Students and Postdoc</h3>
 <ul>
 
 <li><p>Baek Jung Kim (2019) - Marketing Ph.D. student at NYU (advisors: M. Ishihara and V. Singh). First position: Assistant Professor of Marketing, UBC Sauder School of Business.</p>
@@ -37,6 +37,8 @@
 
 <li><p>Dmitry Mitrofanov (2020) - OM Ph.D. student at NYU (advisor: Srikanth Jagabathula). First position: Assistant Professor of Operations Management, Boston College Carroll School of Management.</p>
 
+<li><p>Moshe Unger (2021) - Postdoctoral fellow at NYU (main host: Alex Tuzhilin). First position: Assistant Professor Assistant Professor of Technology and Information Management, Tel Aviv University</p>
+  
 <li><p>Haotian Song - OM Ph.D. student at NYU (advisor: Wenqiang Xiao)</p>
 
 <li><p>Park Sinchaisri - OID Ph.D. student at Wharton (advisor: Gad Allon)</p>
