--- a/students.html
+++ b/students.html
@@ -35,7 +35,7 @@
 
 <li><p>Kevin Jiao (2019) - OM Ph.D. student at NYU. First position: FINRA, Data Scientist.</p>
 
-<li><p>Dmitry Mitrofanov (2020) - OM Ph.D. student at NYU (advisor: Srikanth Jagabathula). First position: Assistant Professor of Operations Management, Boston College Carroll School of Management.</p>
+<li><p>Dmitry Mitrofanov (2020) - OM Ph.D. student at NYU (advisor: Srikanth Jagabathula). First position: Assistant Professor of Business Analytics, Boston College Carroll School of Management.</p>
 
 <li><p>Moshe Unger (2021) - Postdoctoral fellow at NYU (main host: Alex Tuzhilin). First position: Assistant Professor Assistant Professor of Technology and Information Management, Tel Aviv University</p>
   
