--- a/students.html
+++ b/students.html
@@ -28,7 +28,7 @@
 <div id="toptitle">
 <h1>Maxime Cohen</h1>
 </div>
-<h3>Ph.D. Students and Postdoc</h3>
+<h3>Ph.D. Students and Postdocs</h3>
 <ul>
 
 <li><p>Baek Jung Kim (2019) - Marketing Ph.D. student at NYU (advisors: M. Ishihara and V. Singh). First position: Assistant Professor of Marketing, UBC Sauder School of Business.</p>
