--- a/students.html
+++ b/students.html
@@ -31,11 +31,11 @@
 <h3>Ph.D. Students and Postdocs</h3>
 <ul>
 
-<li><p>Baek Jung Kim (2019) - Marketing Ph.D. student at NYU (advisors: M. Ishihara and V. Singh). First position: Assistant Professor of Marketing, UBC Sauder School of Business</p>
+<li><p>Baek Jung Kim (2019) - Marketing Ph.D. at NYU (advisors: M. Ishihara and V. Singh). First position: Assistant Professor of Marketing, UBC Sauder School of Business</p>
 
-<li><p>Kevin Jiao (2019) - OM Ph.D. student at NYU. First position: FINRA, Data Scientist</p>
+<li><p>Kevin Jiao (2019) - OM Ph.D. at NYU. First position: FINRA, Data Scientist</p>
 
-<li><p>Dmitry Mitrofanov (2020) - OM Ph.D. student at NYU (advisor: Srikanth Jagabathula). First position: Assistant Professor of Business Analytics, Boston College Carroll School of Management</p>
+<li><p>Dmitry Mitrofanov (2020) - OM Ph.D. at NYU (advisor: Srikanth Jagabathula). First position: Assistant Professor of Business Analytics, Boston College Carroll School of Management</p>
 
 <li><p>Moshe Unger (2021) - Postdoctoral fellow at NYU (main host: Alex Tuzhilin). First position: Assistant Professor of Technology and Information Management, Tel Aviv University</p>
   
