--- a/students.html
+++ b/students.html
@@ -57,7 +57,7 @@
 
 <li><p>Junge Zhang (2020) - M.S. in Data Science at NYU</p>
   
-<li><p>Matthieu Reed (2020) - McGill UG Integrated Management Student Fellow</p>
+<li><p>Matthieu Reed (2020) - McGill UG Integrated Management Student Fellow. First Position: Gorilla Group, Business Analyst</p>
   
 <li><p>Selena Zhu (2020) - McGill UG Integrated Management Student Fellow</p>
   
