--- a/research.html
+++ b/research.html
@@ -351,14 +351,24 @@ In this paper, we ....
 </ul>
 -->
 
-<h3>Book Chapter, Practitioner, and Conference Publications</h3>
+<h3>Book and Book Chapter</h3>
 
 <ul>
-<li><p><a href="https://link.springer.com/chapter/10.1007/978-3-030-31733-1_4">"Optimizing Promotions for Multiple Items in Supermarkets,"</a> with G. Perakis, Channel Strategies and Marketing Mix in a Connected World, (Eds.) Saibal Ray and Shuya Yin, Springer Series in Supply Chain Management 9, 2020 <br />
+<li><p> L. Dubé, M. C. Cohen, N. Yang, B. Monla, eds. (2020), "Precision Retailing," University of Toronto Press, in progress
 </div>
 </p>
 </li>
 </ul>
+
+<ul>
+<li><p>M. C. Cohen, G. Perakis,<a href="https://link.springer.com/chapter/10.1007/978-3-030-31733-1_4">"Optimizing Promotions for Multiple Items in Supermarkets,"</a>, Channel Strategies and Marketing Mix in a Connected World, (Eds.) Saibal Ray and Shuya Yin, Springer Series in Supply Chain Management 9, 2020 <br />
+</div>
+</p>
+</li>
+</ul>
+
+
+<h3>Practitioner and Conference Publications</h3>
 
 <ul>
 <li><p><a href="">"Conflict Analytics: When Data Science Meets Dispute Resolution,"</a> with S. Dahan and C. Rule, Forthcoming in <b>Management and Business Review</b>
@@ -368,7 +378,7 @@ In this paper, we ....
 </ul>
 
 <ul>
-<li><p><a href="https://maxccohen.github.io/Promotions-Practice.pdf">"Upgrading Promotions Using Business Analytics,"</a> with L. Baardman, K. Panchamgam, and G. Perakis, submitted
+<li><p><a href="https://maxccohen.github.io/Promotions-Practice.pdf">"Upgrading Promotions Using Business Analytics,"</a> with L. Baardman, K. Panchamgam, and G. Perakis, Under second round of review at <b>Management and Business Review</b>
 </div>
 </p>
 </li>
