--- a/research.html
+++ b/research.html
@@ -354,14 +354,14 @@ In this paper, we ....
 <h3>Book and Book Chapter</h3>
 
 <ul>
-<li><p> L. Dubé, M. C. Cohen, N. Yang, B. Monla, eds. (2020), "Precision Retailing," University of Toronto Press, in progress
+<li><p> L. Dubé, M. C. Cohen, N. Yang, B. Monla, eds. (2020), <a href="">"Precision Retailing,"</a> University of Toronto Press, in progress
 </div>
 </p>
 </li>
 </ul>
 
 <ul>
-<li><p>M. C. Cohen, G. Perakis,<a href="https://link.springer.com/chapter/10.1007/978-3-030-31733-1_4">"Optimizing Promotions for Multiple Items in Supermarkets,"</a>, Channel Strategies and Marketing Mix in a Connected World, (Eds.) Saibal Ray and Shuya Yin, Springer Series in Supply Chain Management 9, 2020 <br />
+<li><p>M. C. Cohen, G. Perakis,<a href="https://link.springer.com/chapter/10.1007/978-3-030-31733-1_4">"Optimizing Promotions for Multiple Items in Supermarkets,"</a> Channel Strategies and Marketing Mix in a Connected World, (Eds.) Saibal Ray and Shuya Yin, Springer Series in Supply Chain Management 9, 2020 <br />
 </div>
 </p>
 </li>
