--- a/research.html
+++ b/research.html
@@ -130,7 +130,7 @@ First Place in the 2016 Best Cluster Paper Award - INFORMS Service Science <br /
 </ol>
 
 <ol start="7">
-<li><p><a href="https://maxccohen.github.io/Cloud_Overcommit.pdf">"Overcommitment in Cloud Services - Bin packing with Chance Constraints,"</a> with P. Keller, V. Mirrokni, and M. Zadimoghaddam, <b>Management Science</b> 65(7):3255-3271, 2019 <br />
+<li><p><a href="https://maxccohen.github.io/Cloud_Overcommit.pdf">"Overcommitment in Cloud Services - Bin Packing with Chance Constraints,"</a> with P. Keller, V. Mirrokni, and M. Zadimoghaddam, <b>Management Science</b> 65(7):3255-3271, 2019 <br />
 Accepted to the 2017 <i>ACM SIGMETRICS Conference</i><br />
 <a href="https://maxccohen.github.io/Overcommit_Appendix.pdf">Online Appendix</a>
 </div>
