--- a/research.html
+++ b/research.html
@@ -200,7 +200,7 @@ Finalist for the 2016 Service Science Section Student Paper Competition <br />
 </ul>
 
 <ul>
-<li><p>M. C. Cohen, G. Perakis,<a href="https://link.springer.com/chapter/10.1007/978-3-030-31733-1_4">"Optimizing Promotions for Multiple Items in Supermarkets,"</a> Channel Strategies and Marketing Mix in a Connected World, (Eds.) Saibal Ray and Shuya Yin, Springer Series in Supply Chain Management 9, 2020 <br />
+<li><p>M. C. Cohen, G. Perakis,<a href="https://link.springer.com/chapter/10.1007/978-3-030-31733-1_4">"Optimizing Promotions for Multiple Items in Supermarkets,"</a> Channel Strategies and Marketing Mix in a Connected World, (Eds.) S. Ray and S. Yin, Springer Series in Supply Chain Management 9, 2020 <br />
 </div>
 </p>
 </li>
