--- a/research.html
+++ b/research.html
@@ -245,7 +245,37 @@ Finalist in the 2019 INFORMS BOM Section Best Working Paper Competition <br />
 </ul>
 
 <ul>
-<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3458330">"Incentivizing Commuters to Carpool: A Large Field Experiment with Waze,"</a> with M. D. Fiszer, A. Ratzon, and R. Sasson, submitted <br /> <!-- <font color="red"<b>(NEW - September 2019)</b></font> <br /> -->
+<li><p><a href="http://papers.ssrn.com/sol3/papers.cfm?abstract_id=3028138">"Competition and Coopetition for Two-Sided Platforms,"</a> with R. Zhang, Major Revision in <b>Production and Operations Management</b> <br />
+Honorable mention in the 2017 Best Cluster Paper Award - INFORMS Service Science <br />
+</div>
+</p>
+</li>
+</ul>
+
+<ul>
+<li><p><a href="https://maxccohen.github.io/Pricing-Fairness.pdf">"Pricing with Fairness,"</a> with A. N. Elmachtoub and X. Lei, Under second round of review at <b>Management Science</b> (after Reject and Resubmit) <br /> <!-- <font color="red"<b>(NEW - September 2019)</b></font> <br /> -->
+</div>
+</p>
+</li>
+</ul>
+
+<ul>
+<li><p><a href="">"A Field Experiment on Airline Lead-in Fares,"</a> with A. Jacquillat and J. C. Serpa, Under second round of review at <b>Management Science</b> (after Reject and Resubmit) <br />
+Best Technical Presentation at the 2018 AGIFORS Annual Symposium <br />
+</div>
+</p>
+</li>
+</ul>
+
+<ul>
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3088600">"Best of Both Worlds Ad Contracts: Guaranteed Allocation and Price with Programmatic Efficiency,"</a> with A. Desir, N. Koroula, and B. Sivan, Submitted <br />
+</div>
+</p>
+</li>
+</ul>
+
+<ul>
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3458330">"Incentivizing Commuters to Carpool: A Large Field Experiment with Waze,"</a> with M. D. Fiszer, A. Ratzon, and R. Sasson, Submitted <br /> <!-- <font color="red"<b>(NEW - September 2019)</b></font> <br /> -->
 <a href="https://www.socialscienceregistry.org/trials/4822">AEA RCT Registry</a> <br />
 Media coverage: <a href="https://www.mcgill.ca/delve/article/blog/converting-commuters-carpoolers">Delve</a> <br />
 </div>
@@ -254,29 +284,14 @@ Media coverage: <a href="https://www.mcgill.ca/delve/article/blog/converting-com
 </ul>
 
 <ul>
-<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3565117">"The Impact of High-Occupancy Vehicle Lanes on Commuters: Field Evidence,"</a> with A. Ratzon and R. Sasson, submitted <br /> 
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3565117">"The Impact of High-Occupancy Vehicle Lanes on Commuters: Field Evidence,"</a> with A. Ratzon and R. Sasson, Submitted <br /> 
 </div>
 </p>
 </li>
 </ul>
 
 <ul>
-<li><p><a href="https://maxccohen.github.io/Pricing-Fairness.pdf">"Pricing with Fairness,"</a> with A. N. Elmachtoub and X. Lei, submitted <br /> <!-- <font color="red"<b>(NEW - September 2019)</b></font> <br /> -->
-</div>
-</p>
-</li>
-</ul>
-
-<ul>
-<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3411653">"Data Aggregation and Demand Prediction,"</a> with K. Jiao and R. Zhang, submitted <br /> <!--<font color="red"<b>(NEW - July 2019)</b></font> <br /> -->
-Finalist in the 2019 INFORMS Data Mining Section Best Paper Competition <br />
-</div>
-</p>
-</li>
-</ul>
-
-<ul>
-<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3345669">"Empirical Analysis of Referrals in Ride-Sharing,"</a> with C. Fernandez and A. Ghose, submitted <br /> <!-- <font color="red"<b>(NEW - March 2019)</b></font> <br /> -->
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3345669">"Empirical Analysis of Referrals in Ride-Sharing,"</a> with C. Fernandez and A. Ghose, Submitted <br /> <!-- <font color="red"<b>(NEW - March 2019)</b></font> <br /> -->
 Media coverage: <a href="https://www.stern.nyu.edu/experience-stern/news-events/new-research-nyu-stern-shows-how-marketers-can-boost-high-quality-customer-referrals-drive-growth">NYU Stern Research Highlights</a>, <a href="https://www.nyu.edu/about/news-publications/news/2019/may/new-stern-research-shows-how-marketers-can-boost-high-quality-cu.html">NYU News</a> <br />
 </div>
 </p>
@@ -284,32 +299,22 @@ Media coverage: <a href="https://www.stern.nyu.edu/experience-stern/news-events/
 </ul>
 
 <ul>
-<li><p><a href="">"A Field Experiment on Airline Lead-in Fares,"</a> with A. Jacquillat and J. C. Serpa, submitted <br />
-Best Technical Presentation at the 2018 AGIFORS Annual Symposium <br />
-</div>
-</p>
-</li>
-</ul>
-
-
-<ul>
-<li><p><a href="http://papers.ssrn.com/sol3/papers.cfm?abstract_id=3028138">"Competition and Coopetition for Two-Sided Platforms,"</a> with R. Zhang, submitted <br />
-Honorable mention in the 2017 Best Cluster Paper Award - INFORMS Service Science <br />
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3411653">"Data Aggregation and Demand Prediction,"</a> with K. Jiao and R. Zhang, Submitted <br /> <!--<font color="red"<b>(NEW - July 2019)</b></font> <br /> -->
+Finalist in the 2019 INFORMS Data Mining Section Best Paper Competition <br />
 </div>
 </p>
 </li>
 </ul>
 
 <ul>
-<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3088600">"Allocation and Price Guarantees in an Uncertain Internet Advertising Market,"</a> with A. Desir, N. Koroula, and B. Sivan, submitted <br />
-</div>
-</p>
-</li>
-</ul>
-
-<ul>
-<li><p><a href="http://ssrn.com/abstract=2607688">"Competition and Externalities in Green Technology Adoption,"</a> with G. Perakis and C. Thraves, submitted <br />
+<li><p><a href="http://ssrn.com/abstract=2607688">"Competition and Externalities in Green Technology Adoption,"</a> with G. Perakis and C. Thraves, Submitted <br />
 First Place in the 2015 Best Student Paper POM Supply Chain <br />
+</div>
+</li>
+</ul>
+
+<ul>
+<li><p><a href="">"Field Experiments (and the lack of thereof) for Testing Revenue Strategies in the Hospitality Industry,"</a> with D. Lopez Mateos and N. Pyron, Submitted <br />
 </div>
 </li>
 </ul>
