--- a/research.html
+++ b/research.html
@@ -245,6 +245,12 @@ Finalist in the 2019 INFORMS BOM Section Best Working Paper Competition <br />
 </ul>
 
 <ul>
+<li><p><a href="">"Lyft and Uber IPOs: Before and After,"</a> with D. Mitrofanov, Major Revision in <b>Information Systems Research</b> <br />
+</div>
+</li>
+</ul>
+
+<ul>
 <li><p><a href="http://papers.ssrn.com/sol3/papers.cfm?abstract_id=3028138">"Competition and Coopetition for Two-Sided Platforms,"</a> with R. Zhang, Major Revision in <b>Production and Operations Management</b> <br />
 Honorable mention in the 2017 Best Cluster Paper Award - INFORMS Service Science <br />
 </div>
