--- a/research.html
+++ b/research.html
@@ -320,7 +320,7 @@ First Place in the 2015 Best Student Paper POM Supply Chain <br />
 </ul>
 
 <ul>
-<li><p><a href="https://maxccohen.github.io/Experimentation-Hotels.pdf">"Field Experiments (and the lack of thereof) for Testing Revenue Strategies in the Hospitality Industry,"</a> with D. Lopez Mateos and N. Pyron, Submitted <br />
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3665366">"Field Experiments (and the lack of thereof) for Testing Revenue Strategies in the Hospitality Industry,"</a> with D. Lopez Mateos and N. Pyron, Submitted <br />
 </div>
 </li>
 </ul>
