--- a/students.html
+++ b/students.html
@@ -59,7 +59,7 @@
   
 <li><p>Matthieu Reed (2020) - McGill UG Integrated Management Student Fellow. First Position: Gorilla Group, Business Analyst</p>
   
-<li><p>Selena Zhu (2020) - McGill UG Integrated Management Student Fellow</p>
+<li><p>Selena Zhu (2020) - McGill UG Integrated Management Student Fellow. First Position: Lazard, Investment Banking Analyst</p>
   
 <li><p>Arthur Pentecoste (2020) - McGill Master of Management in Analytics. First Position: BCG GAMMA, Data Scientist</p>
   
