--- a/research.html
+++ b/research.html
@@ -275,6 +275,14 @@ Best Technical Presentation at the 2018 AGIFORS Annual Symposium <br />
 </ul>
 
 <ul>
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3345669">"Empirical Analysis of Referrals in Ride-Sharing,"</a> with C. Fernandez and A. Ghose, Major Revision in <b>Information Systems Research</b> <br /> <!-- <font color="red"<b>(NEW - March 2019)</b></font> <br /> -->
+Media coverage: <a href="https://www.stern.nyu.edu/experience-stern/news-events/new-research-nyu-stern-shows-how-marketers-can-boost-high-quality-customer-referrals-drive-growth">NYU Stern Research Highlights</a>, <a href="https://www.nyu.edu/about/news-publications/news/2019/may/new-stern-research-shows-how-marketers-can-boost-high-quality-cu.html">NYU News</a> <br />
+</div>
+</p>
+</li>
+</ul>
+
+<ul>
 <li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3088600">"Best of Both Worlds Ad Contracts: Guaranteed Allocation and Price with Programmatic Efficiency,"</a> with A. Desir, N. Koroula, and B. Sivan, Submitted <br />
 </div>
 </p>
@@ -292,14 +300,6 @@ Media coverage: <a href="https://www.mcgill.ca/delve/article/blog/converting-com
 
 <ul>
 <li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3565117">"The Impact of High-Occupancy Vehicle Lanes on Commuters: Field Evidence,"</a> with A. Ratzon and R. Sasson, Submitted <br /> 
-</div>
-</p>
-</li>
-</ul>
-
-<ul>
-<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3345669">"Empirical Analysis of Referrals in Ride-Sharing,"</a> with C. Fernandez and A. Ghose, Submitted <br /> <!-- <font color="red"<b>(NEW - March 2019)</b></font> <br /> -->
-Media coverage: <a href="https://www.stern.nyu.edu/experience-stern/news-events/new-research-nyu-stern-shows-how-marketers-can-boost-high-quality-customer-referrals-drive-growth">NYU Stern Research Highlights</a>, <a href="https://www.nyu.edu/about/news-publications/news/2019/may/new-stern-research-shows-how-marketers-can-boost-high-quality-cu.html">NYU News</a> <br />
 </div>
 </p>
 </li>
