--- a/awards.html
+++ b/awards.html
@@ -35,6 +35,8 @@
   
 <li><p>Honorable Mention in the 2020 POMS Service Operations Emerging Scholar Award</p>
 
+<li><p>Finalist in the POMS College of Behavioral Operations Junior Scholar Paper Competition, 2020</p>
+  
 <li><p>First Place in the Best OM Paper in Management Science Award, 2019</p>
   
 <li><p>Finalist in the INFORMS Data Mining Section Best Paper Competition, 2019</p>
