--- a/workEx.html
+++ b/workEx.html
@@ -33,6 +33,13 @@
 
 <ul>
 <li><p><b><a href="">Operations Management - McGill University - 2020 </a></b><br />
+Mini MBA, Executive Institute, Marketing modules for Integrated Management Thinking and Executive Development Course (co-taught with Carl Boutet)
+</p>
+</li>
+</ul>
+  
+<ul>
+<li><p><b><a href="">Operations Management - McGill University - 2020 </a></b><br />
 Undergraduate core course (2 sections of 65 students). Evaluations: 4.9, 4.6 (out of 5)
 </p>
 </li>
