--- a/workEx.html
+++ b/workEx.html
@@ -32,8 +32,8 @@
 <h2>Teaching Experience and Case Studies</h2>
 
 <ul>
-<li><p><b><a href="">Operations Management - McGill University - 2020 </a></b><br />
-Mini MBA, Executive Institute, Marketing modules for Integrated Management Thinking and Executive Development Course (co-taught with Carl Boutet)
+<li><p><b><a href="">Mini MBA, McGill University Executive Institute - 2020 </a></b><br />
+Marketing modules for Integrated Management Thinking and Executive Development Course (co-taught with Carl Boutet)
 </p>
 </li>
 </ul>
