--- a/research.html
+++ b/research.html
@@ -259,7 +259,7 @@ Honorable mention in the 2017 Best Cluster Paper Award - INFORMS Service Science
 </ul>
 
 <ul>
-<li><p><a href="https://maxccohen.github.io/Pricing-Fairness.pdf">"Pricing with Fairness,"</a> with A. N. Elmachtoub and X. Lei, Under second round of review at <b>Management Science</b> (after Reject and Resubmit) <br /> <!-- <font color="red"<b>(NEW - September 2019)</b></font> <br /> -->
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3459289">"Pricing with Fairness,"</a> with A. N. Elmachtoub and X. Lei, Under second round of review at <b>Management Science</b> (after Reject and Resubmit) <br /> <!-- <font color="red"<b>(NEW - September 2019)</b></font> <br /> -->
 Accepted for oral presentation at the 2020 Workshop on Mechanism Design for Social Good (MD4SG) <br />
 </div>
 </p>
