--- a/workEx.html
+++ b/workEx.html
@@ -29,7 +29,7 @@
 </div>
 
 
-<h2>Teaching Experience and Case Studies</h2>
+<h2>Teaching Experience</h2>
 
 <ul>
 <li><p><b><a href="">Mini MBA, McGill University Executive Institute - 2020 </a></b><br />
@@ -80,6 +80,8 @@ Course in the M.S. in Business Analytics program - 61 students
 </li>
 </ul>
 
+<h2>Case Studies</h2>
+  
 <ul>
 <li><p><b><a href="https://www8.gsb.columbia.edu/caseworks/node/674">Case Study: "Supply Chain Coordination and Contracts in the Sharing Economy - a Case Study at Cargo,"</a></b> with C. D. Guetta and W. Xiao<br />
 Columbia CaseWorks 180203, April 2018. Available through <a href="https://hbsp.harvard.edu/product/CU215-PDF-ENG">Harvard Business Publishing</a> <br />
