--- a/grants.html
+++ b/grants.html
@@ -32,6 +32,8 @@
 <ul>
 
 <li><p>2020-2022: SSHRC Insight Development Grant: Using Data Science and Behavioral Analytics to Alleviate Traffic Congestion - $67,152; Role: PI</p>
+
+<li><p>2020-2021: Mitacs Accelerate: Adapting Retail Practices to the Post-Pandemic - $30,000; Role: Co-PI (with J. Clark)</p>
   
 <li><p>2020-2022: IVADO Fundamental Research Project Grant: Retail Innovation Lab: Data Science for Socially Responsible Food Choices - $221,000 <br />
 Role: Co-PI  (with S. Ray, J. Clark, A. Moon)</p>
