--- a/research.html
+++ b/research.html
@@ -392,7 +392,7 @@ In this paper, we ....
 </ul>
 
 <ul>
-<li><p><a href="https://maxccohen.github.io/Promotions-Practice.pdf">"Upgrading Promotions Using Business Analytics,"</a> with L. Baardman, K. Panchamgam, and G. Perakis, Under third round of review at <b>Management and Business Review</b> (minor revision)
+<li><p><a href="https://maxccohen.github.io/Promotions-Practice.pdf">"Upgrading Promotions Using Business Analytics,"</a> with L. Baardman, K. Panchamgam, and G. Perakis, Forthcoming in <b>Management and Business Review</b>
 </div>
 </p>
 </li>
